fixed z-index

--- a/react-app/src/components/css/feed.css
+++ b/react-app/src/components/css/feed.css
@@ -94,7 +94,6 @@ img.post {
     display: flex;
     flex-direction: column;
     height: fit-content;
-    z-index: -1;
 }
 
 
