--- a/react-app/src/components/css/profile.css
+++ b/react-app/src/components/css/profile.css
@@ -6,7 +6,6 @@ div.profile.container {
     position: absolute;
     top: 100px;
     margin: 0px auto;
-    z-index: -1;
     /* height: fit-content; */
 }
 
